--- a/index-desktop.html
+++ b/index-desktop.html
@@ -30,7 +30,9 @@
             Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti
             vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.
           </p>
-          <a href="#end" title="Vai a Contattaci">PARTIAMO!</a>
+          <a href="#end"
+            title="Vai a Contattaci">
+            <button>PARTIAMO!</button></a>
         </div>
       </section>
       <section class="benefits">
